Adding useful libraries, reformatting and porting a lot to Java 8